# cp-microservice

./: .gitignore  Cargo.toml  Dockerfile  README.md  run_tests.sh
.github/workflows/: ci-cd.yml  ci.yml  docker.yml  python.yml
integration_tests/: test_amqp_api_impl.py
src/: error.rs  lib.rs  process.rs  process_request.rs  process_state.rs  rollback_snapshot.rs  rollback_stack.rs
src/api/: async_callback.rs  dispatch.rs
src/api/client/input_consumer/: input_consumer.rs  mod.rs
src/api/input/: input.rs  input_data.rs  input_plugin.rs  mod.rs  replier.rs  request.rs  request_header.rs
src/api/input/plugins/authorizer/: authorizer.rs  mod.rs  token.rs  token_validator.rs  token_wrapper.rs
src/api/server/: action.rs  async_callback.rs  dispatch.rs  mod.rs
src/api/server/input/: action.rs  api_action.rs  executor.rs  input.rs  input_data.rs  input_plugin.rs  mod.rs  replier.rs
src/api/shared/: mod.rs  request.rs  request_header.rs
src/core/: error.rs  mod.rs
src/core/geolocalization/: address.rs
src/core/secrets/: mod.rs  secrets_manager.rs
src/impl/: init.rs  mod.rs  process_signals.rs
src/impl/api/: amqp_input.rs  mod.rs
src/impl/api/client/input_consumer/: amqp_input_consumer.rs  mod.rs
src/impl/api/server/input/: amqp_input.rs  mod.rs
src/impl/api/shared/: amqp_api_entry.rs  amqp_consume.rs  amqp_publish.rs  amqp_qos.rs  amqp_queue.rs  amqp_queue_consumer.rs  amqp_queue_declare.rs  amqp_queue_rpc_publisher.rs  mod.rs
src/impl/core/: bitwarden_secrets_manager.rs  mod.rs
src/logic/: dispatch.rs  executor.rs
src/storage/: dispatch.rs  executor.rs  mod.rs
(+15 files in other folders)
