[package]
name = "cp-microservice"
version = "5123.0.0"
edition = "2021"
license = "MIT"
description = "Template for Cuplan's microservices"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

tokio = { version = "1", features = ["full"] }

once_cell = "1.18"

log = "0.4"