[package]
name = "cp-microservice"
version = "5123.0.0"
edition = "2021"
license = "MIT"
description = "Template for Cuplan's microservices"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

async-channel = "1.9"

log = "0.4"

tokio = { version = "1", features = ["full"] }
once_cell = "1.18"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"