[package]
name = "cp-microservice"
version = "5123.0.0"
edition = "2021"
license = "MIT"
description = "Template for Cuplan's microservices"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

multiple-connections-lapin-wrapper = "0.1.0"

async-channel = "1.9"

log = "0.4"

tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
futures-executor = "0.3"
once_cell = "1.18"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

async-trait = "0.1"

uuid = { version = "1.1", features = ["v4", "fast-rng", "macro-diagnostics"] }

lapin = "2.1"

futures-util = "0.3"

reqwest = {version = "0.11", features = ["json"]}
jsonwebtoken = "8.3"